<resources>
    <string name="app_name">Chess</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">"Happy Coding"</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must be >8 characters</string>

    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_play">Play</string>

    <string name="sign_up_failed">"Failed to sign up"</string>
    <string name="sign_in_failed">Failed to sign in</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_game">GameActivity</string>
</resources>